--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -6,23 +6,38 @@
 	gap: 2rem;
 	&__dealer-container {
 		border: 0.2rem solid rgb(29, 127, 255);
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		gap: 0.6rem;
 		width: 80%;
-		padding: 2rem;
+		padding: 0.5rem;
 	}
 	&__opponents-container {
+		@extend .game__dealer-container;
 		border: 0.2rem solid black;
-		width: 80%;
-		padding: 2rem;
 	}
 
 	&__me-container {
+		@extend .game__dealer-container;
 		border: 0.2rem solid rgb(222, 69, 94);
-		width: 80%;
-		padding: 2rem;
+		background-color: pink;
 	}
 	&__control-board {
+		@extend .game__dealer-container;
 		border: 0.2rem dashed rgb(81, 169, 37);
 		width: 50%;
-		padding: 2rem;
+	}
+	&__card {
+		width: 20vw;
+		&--me {
+			width: 20vw;
+		}
+		&--dealer {
+			width: 14vw;
+		}
+		&--opponent {
+			width: 10vw;
+		}
 	}
 }
