--- a/src/pages/Game/Game.scss
+++ b/src/pages/Game/Game.scss
@@ -9,6 +9,7 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
+		flex-wrap: wrap;
 		gap: 0.6rem;
 		width: 80%;
 		padding: 0.5rem;
