--- a/src/pages/GameOngoing/GameOngoing.scss
+++ b/src/pages/GameOngoing/GameOngoing.scss
@@ -10,7 +10,7 @@
 		flex-direction: row;
 		justify-content: center;
 		flex-wrap: wrap;
-		gap: 0.6rem;
+		// gap: 0.6rem;
 		width: 80%;
 		padding: 0.5rem;
 	}
