add styling to banner, lobby page/components

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,9 +1,26 @@
 .banner {
+	background: rgb(230, 230, 237);
+	background: linear-gradient(
+		90deg,
+		rgba(230, 230, 237, 1) 0%,
+		rgba(255, 255, 255, 1) 50%,
+		rgba(234, 234, 237, 1) 100%
+	);
+	padding: 0.5rem;
+	box-shadow: 0rem 0.5rem 0.9rem rgba(1, 0, 0, 0.7);
+
+	&__content-wrapper {
+		display: flex;
+		flex-direction: column;
+		gap: 0.4rem;
+	}
 	&__profile-wrapper {
+		padding: 0.45rem;
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		gap: 0.5rem;
+		gap: 1rem;
 		justify-content: center;
+		align-items: center;
 	}
 }
