--- a/src/components/ProfilePhoto/ProfilePhoto.scss
+++ b/src/components/ProfilePhoto/ProfilePhoto.scss
@@ -3,7 +3,7 @@
 	height: 2.5rem;
 	border-radius: 0.75rem;
 	overflow: hidden;
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	box-shadow: 0rem 0.125rem 0.25rem rgba(0, 0, 0, 0.3);
 	//border: 0.15rem solid #d8d5d5;
 
 	img {
