--- a/src/pages/Lobby/Lobby.scss
+++ b/src/pages/Lobby/Lobby.scss
@@ -1,7 +1,16 @@
-.game-room {
-	border: 0.1rem solid black;
-	height: auto8rem;
-	&__create-game-wrapper {
-		display: flex;
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/variables" as *;
+
+.lobby {
+	padding: 1rem;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+
+	&__game-room-container {
+		@include tablet {
+			display: flex;
+			flex-direction: row;
+		}
 	}
 }
