add styling to Game and gameOngoing

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,10 +1,10 @@
 .banner {
 	background: rgb(230, 230, 237);
 	background: linear-gradient(
-		90deg,
-		rgba(230, 230, 237, 1) 0%,
-		rgba(255, 255, 255, 1) 50%,
-		rgba(234, 234, 237, 1) 100%
+		180deg,
+		rgba(255, 255, 255) 0%,
+		rgb(226, 226, 226) 60%,
+		rgb(211, 211, 211) 100%
 	);
 	padding: 0.5rem;
 	box-shadow: 0rem 0.5rem 0.9rem rgba(1, 0, 0, 0.7);
