--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -26,7 +26,7 @@ p {
 body {
 	font-family: $font-main;
 	font-size: 1rem;
-	background-image: url("../../../public/assets/background.jfif");
+	background-image: url("../../../public/assets/background.jpeg");
 	background-repeat: repeat;
 	background-size: cover;
 }
@@ -99,7 +99,7 @@ button {
 	// App Button
 	&--sign-in-google {
 		@extend .btn;
-		width: 12rem;
+		width: 14rem;
 		background: #e24141;
 		display: flex;
 		flex-direction: row;
