--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -8,6 +8,9 @@
 	);
 	padding: 0.5rem;
 	box-shadow: 0rem 0.5rem 0.9rem rgba(1, 0, 0, 0.7);
+	//width: 80%;
+	min-width: 20rem;
+	margin: auto;
 
 	&__content-wrapper {
 		display: flex;
