--- a/src/pages/Lobby/Lobby.scss
+++ b/src/pages/Lobby/Lobby.scss
@@ -7,8 +7,23 @@
 	display: flex;
 	flex-direction: column;
 
-	&__game-room-container {
+	&__btn-wrapper {
+		width: 80%;
+		min-width: 18rem;
+		margin: auto;
 		@include tablet {
+			width: auto;
+		}
+	}
+	&__game-room-container {
+		width: 100%;
+		min-width: 18rem;
+		margin: auto;
+		@include mobileXL {
+			width: 90%;
+		}
+		@include tablet {
+			width: auto;
 			display: flex;
 			flex-direction: row;
 		}
