--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,5 +1,11 @@
 @use "variables" as *;
 
+@mixin mobileXL {
+	@media screen and (min-width: $mobileXL-breakpoint) {
+		@content;
+	}
+}
+
 @mixin tablet {
 	@media screen and (min-width: $tablet-breakpoint) {
 		@content;
